Added some JS text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript with W3Schools</title>
 </head>
 <body>
+
+    <h2>What can JavaScript do?</h2>
+
+    <p id="demo">JavaScript can change HTML content.</p>
+
+    <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+
+    <p>JavaScript can be placed in the &lt;body&gt; or in the  &lt;head&gt;, and is placed within the  &lt;script&gt; tag</p>
+    <!--Placing scripts at the bottom of the &lt;body&gt; element improves the display speed, because script interpretation slows down the display.-->
     
 </body>
 </html>
