--- a/index.html
+++ b/index.html
@@ -7,15 +7,46 @@
     <title>JavaScript with W3Schools</title>
 </head>
 <body>
+    <!--JavaScript can be placed in the &lt;body&gt; or in the  &lt;head&gt;, and is placed within the  &lt;script&gt; tag-->
+    <!--Placing scripts at the bottom of the &lt;body&gt; element improves the display speed, because script interpretation slows down the display.-->
 
     <h2>What can JavaScript do?</h2>
 
     <p id="demo">JavaScript can change HTML content.</p>
 
-    <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+    <button 
+        type="button"
+        onclick="myFunction()">Click Me!</button>
 
-    <p>JavaScript can be placed in the &lt;body&gt; or in the  &lt;head&gt;, and is placed within the  &lt;script&gt; tag</p>
-    <!--Placing scripts at the bottom of the &lt;body&gt; element improves the display speed, because script interpretation slows down the display.-->
-    
+<hr>
+
+<h2>JavaScript display possibilities</h2>
+
+<p>JavaScript can "display" data in different ways:</p>
+
+<ul>
+    <li>
+        <p>Writing into an HTML element, by using <em>innerHTML.</em></p>
+    </li> <!--Changing the innerHTML property of an HTML element is a common way to display data in HTML.-->
+    <li>
+        <p>Writting into the HTML output, by using <em>document.write()</em></p>
+    </li> <!--Using document.write() after an HTML document is loaded, will DELETE all existing HTML. This method should only be used for testing-->
+    <li>
+        <p>Writing into an alert box, by using <em>window.alert()</em></p>
+    </li><!--specifying the 'window' keyword is optional. So it should work with alert() as well.-->
+    <li>
+        <p>Writing into the browser console, by using <em>console.log()</em></p>
+    </li> <!--For debugging purposes, you can call the console.log() method in the browser to display data.-->
+</ul>
+
+<hr>
+
+<h2>JavaScript statements</h2>
+
+<p id=demo1></p>
+
+
+    <script src="Scripts/main.js"></script>
+
 </body>
 </html>
