--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
 <button onclick="changeText()">Change text</button>
 <p id=demo4>Please visit Google!</p>
 
+<h3>JavaScript methods for searching strings:</h3>
+<ul>
+    <li><p>String.indexOf()</p></li> <!--The indexOf() method returns the index of (the position of) the first occurrence of a specified text in a string:-->
+    <li><p>String.lastindexOf()</p></li> <!--The lastIndexOf() method returns the index of the last occurrence of a specified text in a string:-->
+    <li><p>String.startsWith()</p></li> <!--The startsWith() method returns true if a string begins with a specified value, otherwise false:-->
+    <li><p>String.endsWith()</p></li> <!--The endsWith() method returns true if a string ends with a specified value, otherwise false:-->
+
+</ul>
+
     <script src="Scripts/main.js"></script>
 
 </body>
