Added stylesheet & to do list button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript with W3Schools</title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
     <!--JavaScript can be placed in the &lt;body&gt; or in the  &lt;head&gt;, and is placed within the  &lt;script&gt; tag-->
@@ -60,6 +61,8 @@
 
 <p id=demo2></p>
 
+<hr>
+
 <h2>HTML events</h2>
 
 <p>An HTML event can be something the browser does, or something a user does.</p>
@@ -77,7 +80,9 @@
 <p id=demo3></p>
 <button onclick="displayDate()">The time is?</button>
 
-<h3>Common HTML events</h3>
+<hr>
+
+<h2>Common HTML events</h2>
 <p>Here is a list of some common HTML events</p>
 <ul>
     <li><p >onchange</p></li> <!-- An HTML element has been changed -->
@@ -87,6 +92,8 @@
     <li><p>onkeydown</p></li> <!-- The user pushes a keyboard key -->
     <li><p>onload</p></li> <!-- The browser had finished loading the page -->
 </ul> 
+
+<hr>
 
 <h2>Extracting String Parts</h2>
 <p>There are 3 methods for extracting a part of a string</p>
@@ -100,6 +107,8 @@
 <button onclick="changeText()">Change text</button>
 <p id=demo4>Please visit Google!</p>
 
+<hr>
+
 <h3>JavaScript methods for searching strings:</h3>
 <ul>
     <li><p>String.indexOf()</p></li> <!--The indexOf() method returns the index of (the position of) the first occurrence of a specified text in a string:-->
@@ -108,6 +117,8 @@
     <li><p>String.endsWith()</p></li> <!--The endsWith() method returns true if a string ends with a specified value, otherwise false:-->
 
 </ul>
+ 
+<button><a href="todo.html">To do list</a></button>
 
     <script src="Scripts/main.js"></script>
 
