--- a/todo.html
+++ b/todo.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Todo List</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>TodoList</h1>
-        
-        <form>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Todo List</title>
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
+    <body>
+        <button><a href="todo.html">Refresh</a></button>
+        <button><a href="index.html">Back to homepage</a></button>
+        <div class="container">
+            <h1>TodoList</h1>
+            
+            <form>
             <input type="text" id="new-todo" placeHolder="What needs to be done?" />
         </form>
 
@@ -28,7 +30,6 @@
             <span id= "total-count"> 1 </span>
         </div>
     </div>
-<button><a href="index.html">Back to homepage</a></button>
     <script src="scripts/todo.js" type="text/javascript">
     </script>
 </body>
