made various new demos untill 15

--- a/test.html
+++ b/test.html
@@ -26,8 +26,19 @@
     <hr>
     <h2>Extracting String Characters</h2>
     <p id= "demo3"></p><p id= "demo4"></p><p id= "demo5"></p>
-    <p id= "demo6"></p><p id= "demo7"></p><p id= "demo8"></p>
-    <hr>
+    <h2>JavaScript String Search</h2>
+    <p>Javascript methods for searching strings:</p>
+        <ul>
+            <li><p>String.indexOf()</p></li> <!--The indexOf() method returns the index of (the position of) the first occurrence of a specified text in a string:-->
+            <li><p>String.lastIndexOf()</p></li> <!--The lastIndexOf() method returns the index of the last occurrence of a specified text in a string:-->
+            <li><p>String.startsWith()</p></li> <!---->
+            <li><p>String.endsWith()</p></li> <!---->
+        </ul>
+        <p id= "demo6"></p><p id= "demo7"></p><p id= "demo8"></p>
+        <p id= "demo9"></p><p id= "demo10"></p><p id= "demo11"></p>
+        <p id= "demo12"></p><p id= "demo13"></p><p id= "demo14"></p>
+        <p id= "demo15"></p>
+        <hr>
     <script src="Scripts/test.js"></script>
 </body>
 </html>
