Made todoStyle.css and added link to todo.html

--- a/todo.html
+++ b/todo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Todo List</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/todoStyle.css">
     </head>
     <body>
         <button><a href="todo.html">Refresh</a></button>
