made href button for jsArrays page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button><a href="index.html">Refresh</a></button>
         <button><a href="todo.html">To do list</a></button>
         <button><a href="test.html">JavaScript test page</a></button>
+        <button><a href="jsArrays.html">JavaScript arrays page</a></button>
         
         <h2>What can JavaScript do?</h2>
         
